--- a/templates/template-flutter/assets/lang/pt.json
+++ b/templates/template-flutter/assets/lang/pt.json
@@ -1,10 +1,10 @@
 {
-  "error-messages": {
-    "nothing-found": "Nada encontrado",
-    "client": "Erro no github",
-    "internal": "Erro interno"
-  },
-  "app-title": "Pesquisa no Github",
-  "input-label": "Buscar...",
-  "helper-text": "Digite algo..."
+	"error": {
+		"nothing-found": "Nada encontrado",
+		"client": "Erro no github",
+		"internal": "Erro interno"
+	},
+	"title": "Pesquisa no Github",
+	"input-label": "Pesquise um usuario...",
+	"empty-helper": "Digite algo para encontrar um usuario..."
 }
